--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,6 +1,15 @@
-<aside class="hidden xl:block tc-sidebar pt-6 sticky top-0 mb-auto">
-  <div class="text-justify tc-sidebar-text">
-    <p>Because <b>C++ is fun</b></p>
+<aside class="hidden xl:block tc-sidebar sticky top-0 mb-auto">
+  <div class="text-justify tc-nav tc-sidebar-text">
+    <a
+      class="block font-black hover:underline text-2xl md:text-3xl no-underline tracking-tight"
+      style="text-underline-offset: 6px"
+      href="/"
+    >
+      <img src="/img/logo/logo-64x64.png" class="inline-flex md:me-2" />
+      <span class="font-black align-middle my-8 inline-block">
+        {{ .Site.Title }}
+      </span>
+    </a>
   </div>
 
   <ul>
@@ -19,7 +28,7 @@
 
   <div class="flex flex-row content-center my-auto">
     <div class="flex flex-col my-auto">
-      <div class="font-bold mb-1">Follow me on</div>
+      <div class="font-bold mb-1">Follow on</div>
       <div class="flex flex-row sjjpace-x-5">
         <a
           href="https://www.linkedin.com/mynetwork/discovery-see-all/?usecase=PEOPLE_FOLLOWS&followMember=gituliar"
@@ -47,11 +56,11 @@
         </a>
       </div>
     </div>
-    <div class="ml-auto inline-block">
+    <!-- <div class="ml-auto inline-block">
       <img
         src="/img/profile-64x64.png"
         class="w-16 rounded-full scale-x-[-1]"
       />
-    </div>
+    </div> -->
   </div>
 </aside>
