--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<nav class="tc-nav gh-canvas">
+<nav class="">
   <div class="flex flex-row justify-between gh-width-wide">
     <div class="block xl:hidden pt-9 flex flex-row space-x-3 md:space-x-5">
       <a
