--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,5 +1,5 @@
-<aside class="hidden xl:block tc-sidebar sticky top-0 mb-auto">
-  <div class="text-justify tc-nav tc-sidebar-text">
+<aside class="w-64 text-white flex flex-col sticky top-0 mb-auto">
+  <div class="text-justify w-64">
     <a
       class="block font-black hover:underline text-2xl md:text-3xl no-underline tracking-tight"
       style="text-underline-offset: 6px"
@@ -12,19 +12,33 @@
     </a>
   </div>
 
-  <ul>
-    {{ $sections := index .Site.Data.sections "sections" }} {{ range $sections
-    }}
-    <li>
-      <a href="/{{ .name }}">{{ .title }}</a>
-      <ul>
-        {{ range (where site.RegularPages "Section" .name) }}
-        <li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
+  {{ $currentSection := .Section }}
+
+  <nav class="flex-1 py-4">
+    <ul>
+      {{ $sections := index .Site.Data.sections "sections" }} {{ range $sections
+      }}
+      <li>
+        {{ if eq .name $currentSection }}
+        <a href="/{{ .name }}" class="active">{{ .title }}</a>
+        <ul>
+          {{ range (where site.RegularPages "Section" .name) }}
+          <li>
+            <a
+              href="{{ .RelPermalink }}"
+              class="{{ if eq .Permalink $.Permalink }}active{{ end }}"
+              >{{ .LinkTitle }}</a
+            >
+          </li>
+          {{ end }}
+        </ul>
+        {{ else }}
+        <a href="/{{ .name }}">{{ .title }}</a>
         {{ end }}
-      </ul>
-    </li>
-    {{ end }}
-  </ul>
+      </li>
+      {{ end }}
+    </ul>
+  </nav>
 
   <div class="flex flex-row content-center my-auto">
     <div class="flex flex-col my-auto">
