--- a/main.css
+++ b/main.css
@@ -170,8 +170,16 @@
     opacity: 0.7;
   }
 
+  .active {
+    font-weight: 700;
+  }
+
   .tc-blog-description {
     font-style: italic;
+  }
+
+  .tc-content {
+    width: 80ch;
   }
 
   .tc-nav {
@@ -184,18 +192,6 @@
   .tc-nav a:hover {
     opacity: 0.7;
     text-decoration: none;
-  }
-
-  .tc-sidebar {
-    width: var(--sidebar-width);
-    font-weight: 400;
-  }
-  .tc-sidebar-text {
-    font-weight: 500;
-  }
-
-  .tc-sidebar-text b {
-    font-weight: 700;
   }
 
   .tc-sidebar-social {
