--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
         <!-- Sidebar -->
         {{ partial "sidebar.html" . }}
 
-        <main class="flex-1 tc-content">
+        <main class="flex-1 tc-content pt-4">
           <!-- Content -->
           {{ block "content" . }} {{ .Content }} {{ end }}
         </main>
