--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,14 +1,8 @@
-<aside class="w-64 text-white flex flex-col sticky top-0 mb-auto">
-  <div class="text-justify w-64">
-    <a
-      class="block font-black hover:underline text-2xl md:text-3xl no-underline tracking-tight"
-      style="text-underline-offset: 6px"
-      href="/"
-    >
+<aside class="w-64 text-white flex flex-col sticky pt-4 top-0 mb-auto">
+  <div class="text-justify w-64 tc-sidebar-title">
+    <a class="block" href="/">
       <img src="/img/logo/logo-64x64.png" class="inline-flex md:me-2" />
-      <span class="font-black align-middle my-8 inline-block">
-        {{ .Site.Title }}
-      </span>
+      <span class="align-middle inline-block"> {{ .Site.Title }} </span>
     </a>
   </div>
 
