--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -2,12 +2,4 @@
 
 <h2>{{ .Title }}</h2>
 
-{{ .Content }}
-
-<!-- <ul>
-  {{ range (where site.RegularPages "Section" .Section) }}
-  <li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
-  {{ end }}
-</ul> -->
-
-{{ end }}
+{{ .Content }} {{ end }}
