--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,15 +1,7 @@
 {{ define "content" }}
 
 <article>
-  <!-- <header class="">
-    <h1 class="" itemprop="name headline">{{ .Title }}</h1>
-
-    {{ if .Params.Description }}
-    <h4 class="py-6 tc-blog-description">{{ .Params.Description }}</h4>
-    {{ end }}
-  </header> -->
-
-  <section class="mb-8" itemprop="articleBody">{{ .Content }}</section>
+  <section class="" itemprop="articleBody">{{ .Content }}</section>
 
   {{ if eq hugo.Environment "production" }}
   <div class="">
