--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,8 +116,8 @@ h3 {
 
 h4 {
   margin-top: 0.5em;
-  font-weight: 900;
-  color: green;
+  /* font-weight: 900;
+  color: green; */
 }
 
 header {
@@ -156,6 +156,13 @@ tr {
 }
 
 ul {
+}
+
+del {
+  all: unset;
+
+  font-weight: 900;
+  color: green;
 }
 
 .active {
